update - minor change

--- a/macromania/css/style.css
+++ b/macromania/css/style.css
@@ -57,7 +57,7 @@ ul {
     padding: 0;
 }
 
-.lolli {
+.navbar {
     float: left;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
