--- a/macromania/css/style.css
+++ b/macromania/css/style.css
@@ -103,7 +103,7 @@ h3 {
 
 /* Image slider */
 
-textarea {
+/* textarea {
     width: 100%;
     height: 150px;
     padding: 12px 20px;
@@ -116,7 +116,7 @@ textarea {
   }
 
   input[type=text], select {
-    width: 100%;
+    width: 150%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
@@ -125,7 +125,7 @@ textarea {
     box-sizing: border-box;
   }
 
-  .form {
+  .form-control {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
@@ -154,7 +154,7 @@ textarea {
   
   input[type=submit]:hover {
     background-color: #45a049;
-  }
+  } */
 
 
   /* Cookie */
